...
                            name="mail"
                            size={20}
                            color={theme.colors.lightGreen}
                        />
                        <Input
                            name="email"
                            placeholder="exemplo@gmail.com"
                            control={control}
                        />
                    </InputArea>

                    <InputArea style={{ marginBottom: 8 }}>
                        <Icon
...
                            placeholder="******"
                            control={control}
                        />
                    </InputArea>

                    <LoginButton
                        title="Entrar"
                        onPress={submit}
                        disabled={loading}
                    />

                    <Text>Esqueceu sua senha?</Text>
                    <Divider />
...
