...

  return (<>
    <FooterView style={{ height: 60 + insets.bottom, paddingBottom: insets.bottom }}>

      <Pressable onPress={() => router.push("/home")}>
        <IconContainer>
          <TextIcon isActive={isHomeActive}>Início</TextIcon>
          {isHomeActive ? (
            <FontAwesome6
              name="house"
              iconStyle="solid"
              size={24}
              color={theme.colors.states.activeGreen}
...
